vlib/v/checker/tests/cast_function_to_string_err.vv
fn main() {
	println(string(main))
}
